Rename files and fix misaligned copyright section

--- a/18_css/2_external/main.css
+++ b/18_css/2_external/main.css
@@ -6,7 +6,7 @@ K18 -- Filler and Finery
 
 body {
     background: #666666;
-    font-family: Arial; 
+    font-family: Arial;
     padding: 0px;
     margin: 0% 5% 1% 1%;
   }
@@ -14,35 +14,35 @@ body {
     width: 100%;
     margin-top: 12px;
     padding: 1%;
-    text-align: center; 
-    color:white; 
+    text-align: center;
+    color:white;
     background-color: #bdbbbb;
   }
 
   h3 {
     margin-left: 4%;
   }
-  
+
   p {
       padding-right: 1%;
   }
-  
+
   a {
     margin-left: 4%;
-    text-decoration: none; 
-    color: #d1cfcf; 
+    text-decoration: none;
+    color: #d1cfcf;
     display: block;
     font-weight: bold;
   }
-  
+
   ul {
     list-style-type: none;
     padding: 0px;
   }
-  
+
   .navbar, .text {
-    position: fixed; 
-    top: 60px; 
+    position: fixed;
+    top: 60px;
     background-color: #767676;
     height: 88%
   }
@@ -52,16 +52,16 @@ body {
   }
 
   .text{
-    margin-left: 25%; 
-    width: 70.9%; 
+    margin-left: 25%;
+    width: 70.9%;
   }
-  
+
   .copyright {
-    background-color: #565656; 
-    color: #76746b; 
-    width: 44.5%; 
-    padding: 15px 15px 15px 50%; 
-    position: fixed; 
-    bottom: 10px; 
+    background-color: #565656;
+    color: #76746b;
+    width: 94%;
+    padding: 1%;
+    position: fixed;
+    bottom: 10px;
     text-align: right;
   }
